# ad688-sp25-lab01

./: .gitignore  .nojekyll  README.md  about.html  index.html  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  test.txt
.github/workflows/: publish.yml
ad688-sp25-lab01/: _quarto.yml  index.qmd
ad688-sp25-lab01/_site/: about.html  index.html  search.json
testweb/: index.qmd
